--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -19,6 +19,8 @@ body {
     margin-left: -.1em;
 }
 
+.material-icons.grey400 {color:#BDBDBD;}
+
 a.disabled {
    pointer-events: none;
    cursor: default;
