--- a/UI-MVC/Views/Shared/_Layout.cshtml
+++ b/UI-MVC/Views/Shared/_Layout.cshtml
@@ -25,8 +25,16 @@
     <div class="body-content">
         @RenderBody()
     </div>
+    <div class="clearfix"></div>
 
-    @Scripts.Render("~/bundles/jquery")
+    @if (ViewBag.NoFooter == null)
+    {
+        <footer>
+            Copyright &copy; @DateTime.Today.Year
+        </footer>
+    }
+
+@Scripts.Render("~/bundles/jquery")
 @RenderSection("scripts", required: false)
 </body>
 </html>
