--- a/UI-MVC/Views/Organisations/Details.cshtml
+++ b/UI-MVC/Views/Organisations/Details.cshtml
@@ -20,7 +20,7 @@
         }
         else
         {
-            <img src="~/Content/img/playlist.png" style="display: block; margin-left: auto; margin-right: auto; height: 250px;" />
+            <img src="~/Content/img/playlistheader.jpg" style="display: block; margin-left: auto; margin-right: auto; height: 250px;" />
         }
 
     </div>
@@ -66,7 +66,7 @@
     
 <div class="title">
     <h1>Playlists</h1>
-    <table id="playlists">
+    <table id="playlist-overview">
         <tr>
             <th></th>
             <th></th>
@@ -124,15 +124,15 @@
         }
     </table>
     <br />
-    Page @(ViewBag.PageCount < ViewBag.PageNumber ? 0 : ViewBag.PageNumber) of @ViewBag.PageCount
+    Page @(Model.Playlists.PageCount < Model.Playlists.PageNumber ? 0 : Model.Playlists.PageNumber) of @Model.Playlists.PageCount
 
-    @Html.PagedListPager(ViewData.Model.Playlists, page => Url.Action("Index", new { Model.Id}))
+    @Html.PagedListPager(Model.Playlists, page => Url.Action("Details", new { Model.Id, page}))
 </div>
     }
 @if (Model.Organiser.Email.Equals(User.Identity.Name))
 {
-    <div>
-        <a href='javascript:AddPlaylist()' class="btn btn-right" style="margin-top: 1em;">
+    <div class="add-playlist">
+        <a href='javascript:AddPlaylist()' class="btn btn-right" >
             <i class="material-icons">playlist_add</i> add playlist
         </a>
     </div>
@@ -143,8 +143,8 @@ else
     {
         if (user.Email.Equals(User.Identity.Name))
         {
-            <div>
-                <a href='javascript:AddPlaylist()' class="btn btn-right" style="margin-top: 1em;">
+            <div class="add-playlist">
+                <a href='javascript:AddPlaylist()' class="btn btn-right" >
                     <i class="material-icons">playlist_add</i> add playlist
                 </a>
             </div>
