--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -216,13 +216,12 @@ header {
 
 .co-organiser {
   display: inline-block;
-  text-align: center;
-  margin: .5em; }
+  text-align: center; }
   .co-organiser img {
     display: block;
     width: 50px;
     height: 50px;
-    margin-bottom: .5em; }
+    padding-left: .5em; }
     @media screen and (max-width: 600px) {
       .co-organiser img {
         max-width: 10px;
@@ -235,6 +234,10 @@ header {
       .co-organiser img {
         display: inline-block;
         vertical-align: middle; } }
+
+.add-playlist {
+  margin-bottom: 20px;
+  padding-bottom: 20px; }
 
 .body-content {
   padding: 1em 5em;
@@ -307,6 +310,10 @@ header {
       min-width: 150px; }
     #playlist-tracks .track .tracktitle {
       min-width: 150px; }
+
+#playlist-overview {
+  padding: 0;
+  width: 100%; }
 
 #player {
   margin-top: 2em;
