--- a/UI-MVC/Views/Home/Portal.cshtml
+++ b/UI-MVC/Views/Home/Portal.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Configuration
-@using BB.BL.Domain.Organisations
+﻿@using BB.BL.Domain.Organisations
 @using BB.BL.Domain.Playlists
 @using BB.UI.Web.MVC.Controllers.Utils
 
