--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -512,12 +512,22 @@ header {
 .horizontal-center {
   text-align: center; }
 
-footer {
+footer #footer-top {
+  background-color: #333;
   padding: 1em 5em;
   max-width: 1500px;
   margin: auto; }
   @media screen and (max-width: 600px) {
-    footer {
+    footer #footer-top {
+      padding: 0 1em; } }
+
+footer #footer-bottom {
+  background-color: black;
+  padding: 1em 5em;
+  max-width: 1500px;
+  margin: auto; }
+  @media screen and (max-width: 600px) {
+    footer #footer-bottom {
       padding: 0 1em; } }
 
 .hidden {
