test + controle co organiser

--- a/UI-MVC/Views/Organisations/Details.cshtml
+++ b/UI-MVC/Views/Organisations/Details.cshtml
@@ -174,7 +174,7 @@ else
 
                     },
                     error: function (e){
-                        alert("Email kon niet gevonden worden");
+                        notie.alert(3, "email not found or already in organisation", 3);
                     }
 
                 })
