First Selenium test :shipit:

--- a/UI-MVC/Views/Shared/_LoginPartial.cshtml
+++ b/UI-MVC/Views/Shared/_LoginPartial.cshtml
@@ -21,7 +21,7 @@ else
 {
     <ul class="nav navbar-nav navbar-right">
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new {id = "registerLink"})</li>
-        <li><a href="#loginModal">Login</a></li>
+        <li><a href="#loginModal" id="login">Login</a></li>
     </ul>
     <div id="loginModal" class="modal" >
         <div class="modal-content">
