--- a/UI-MVC/Views/Organisations/Details.cshtml
+++ b/UI-MVC/Views/Organisations/Details.cshtml
@@ -26,6 +26,25 @@
 
     <div> 
         <h1>@Model.Name</h1>
+        @if (ViewBag.Following.Equals("None"))
+        {
+            <a href='javascript:Follow()' class="btn" style="margin-top: 1em;">
+                <i class="material-icons">follow_organisation</i> Follow
+            </a>
+        } else if(ViewBag.Following.Equals("Following")) {
+            <a href='javascript:UnFollow()' class="btn" style="margin-top: 1em;">
+                <i class="material-icons">follow_organisation</i> Un follow
+            </a>
+        }
+        else if (ViewBag.Following.Equals("Co-Organiser"))
+        {
+            <a href='javascript:Leave()' class="btn" style="margin-top: 1em;">
+                <i class="material-icons">follow_organisation</i> Leave organisation
+            </a>
+        }else if (ViewBag.Following.Equals("Organiser"))
+        {
+
+        }
         <hr />
         <p>Organiser: @Model.Organiser.FirstName @Model.Organiser.LastName</p>
         <p>Co-organisers: </p>
@@ -153,6 +172,66 @@ else
 }
 
     @section scripts{
+<script>
+            function Leave() {
+                $.ajax({
+                    url: "/Organisations/LeaveOrganisation",
+                    type: "POST",
+                    data: {
+                        organisationId: @Model.Id, email: "@User.Identity.Name"
+                    },
+                    succes: function (e){
+
+                    },
+                    error: function (e){
+                        notie.alert(3, "Could not leave this organisation", 3);
+                    }
+                })
+                .done(function (){
+                    window.location.href = '@Url.Action("Details", new { id = Model.Id})';
+                });
+            }
+</script>
+<script>
+            function UnFollow() {
+                $.ajax({
+                    url: "/Organisations/UnFollowOrganisation",
+                    type: "POST",
+                    data: {
+                        organisationId: @Model.Id, email: "@User.Identity.Name"
+                    },
+                    succes: function (e){
+
+                    },
+                    error: function (e){
+                        notie.alert(3, "Could not unfollow this organisation", 3);
+                    }
+                })
+                .done(function (){
+                    window.location.href = '@Url.Action("Details", new { id = Model.Id})';
+                });
+            }
+</script>
+        <script>
+            function Follow() {
+                $.ajax({
+                    url: "/Organisations/FollowOrganisation",
+                    type: "POST",
+                    data: {
+                        organisationId: @Model.Id, email: "@User.Identity.Name"
+                    },
+                    succes: function (e){
+
+                    },
+                    error: function (e){
+                        notie.alert(3, "Could not follow this organisation", 3);
+                    }
+                })
+                .done(function (){
+                    window.location.href = '@Url.Action("Details", new { id = Model.Id})';
+                });
+            }
+        </script>
         <script>
             function AddPlaylist(){
                 window.location.href = '@Url.Action("Create", "Playlist")';
