--- a/UI-MVC/Content/Portal.css
+++ b/UI-MVC/Content/Portal.css
@@ -63,7 +63,12 @@ h3 {
   height: 100px;
   border-radius: 100%;
   float: left;
-  margin-right: 16px; }
+  border: 1px solid white;
+  margin-right: 16px;
+  background: rgba(0, 0, 0, 0.4); }
+
+.playlist-image:hover {
+  border: 1px solid black; }
 
 .clear-playlist {
   clear: both; }
