--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BB.BL.Domain.Playlists
+@using BB.BL.Domain.Users
 @using BB.UI.Web.MVC.Models
 @model BB.BL.Domain.Playlists.Playlist
 
@@ -29,22 +30,21 @@
 </div>    
 }
 
-
-
-
 <div id="playlist-view" style="margin-top: 1em">
     @Html.Partial("PlaylistTable", @Model)
-    
-    
 </div>
+
 <div id="nowPlayingRow" style="margin-top: 5em">
-    @if (Model.PlaylistTracks.Count != 0)
+    @if (((List<User>) ViewBag.Organisers).Any(p => p.Email == User.Identity.Name))
     {
-        <a class="btn" id="playBtn"><i id="icon" class="material-icons">play_arrow</i> </a>
-    }
-    else
-    {
-        <a class="btn disabled" id="playBtn"><i id="icon" class="material-icons">play_arrow</i> </a>
+         if (Model.PlaylistTracks.Count != 0)
+         {
+             <a class="btn" id="playBtn"><i id="icon" class="material-icons">play_arrow</i> </a>
+         }
+         else
+         {
+             <a class="btn disabled" id="playBtn"><i id="icon" class="material-icons">play_arrow</i> </a>
+         }
     }
     <a class="btn disabled" id="nextBtn"><i id="icon" class="material-icons">skip_next</i> </a>
     <a href="#addTrackModal" class="btn btn-right" style="display: inline-block">
@@ -52,6 +52,7 @@
     </a>
 
 </div>
+
 
 <div id="addTrackModal" class="modal" style="margin-top: -180px">
     <div class="modal-content" style="width: 30%; height: 70%">
@@ -172,7 +173,7 @@
                     playBtn.className = 'btn';
                 })
                 .fail(function() {
-                    notie.alert(3, 'You cannot add a song that is already in the list', 2.5);
+                    notie.alert(3, 'You cannot add a song that is already in the list or is already played', 2.5);
                 });
         }
 
