added changes to myportal (edit, delete playlists)

--- a/UI-MVC/Content/Portal.css
+++ b/UI-MVC/Content/Portal.css
@@ -17,7 +17,7 @@ h3 {
   position: relative;
   overflow: hidden;
   margin-bottom: 1em;
-  background-image: url(https://unsplash.com/photos/pFqrYbhIAXs/download);
+  background-image: url(/Content/img/login-banner.jpg);
   background-size: cover;
   background-position: center center;
   margin-bottom: 2em; }
