--- a/UI-MVC/Views/Home/Portal.cshtml
+++ b/UI-MVC/Views/Home/Portal.cshtml
@@ -5,11 +5,14 @@
 
 @{
     ViewBag.Title = "Portal";
+    int plId = 0;
 }
 
 @section PortalPageStyle{
-    <link href="@Url.Content("~/Content/Portal.min.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/Portal.min.css")" rel="stylesheet" type="text/css"/>
+    <link href="@Url.Content("~/Content/dropit.css")" rel="stylesheet" type="text/css" />
 }
+
 
 @section escape_padding {
     <div class="loggedin-banner">
@@ -18,11 +21,28 @@
         </div>
     </div>
 }
+
 <div id="myModal" class="modal" style="margin-top: -90px">
-    <div class="modal-content" style="width: 620px; height: 530px">
+    <div class="modal-content" style="width: 620px; height: 530px; overflow: hidden">
         <a href="#close" title="Close" class="close">X</a>
         <div class="modal-body" style="margin-left: 60px; width: 100%">
             @Html.Partial("~/Views/Organisations/Create.cshtml", new OrganisationViewModel())
+        </div>
+    </div>
+</div>
+<div id="playlistModal" class="modal" style="margin-top: -90px">
+    <div class="modal-content" style="width: 850px; height: 530px; overflow: hidden">
+        <a href="#close" title="Close" class="close">X</a>
+        <div class="modal-body" style="margin-left: 60px; width: 100%">
+            @Html.Partial("~/Views/Playlist/Create.cshtml", new PlaylistViewModel())
+        </div>
+    </div>
+</div>
+<div id="editPlaylistModal" class="modal" style="margin-top: -90px">
+    <div class="modal-content" style="width: 850px; height: 530px; overflow: hidden">
+        <a href="#close" title="Close" class="close">X</a>
+        <div class="modal-body" id="editPlaylistModal-body" style="margin-left: 60px; width: 100%">
+            
         </div>
     </div>
 </div>
@@ -56,7 +76,7 @@
          }
         @if (ViewBag.MyOrganisations.Count == 0)
         {
-            <p style="padding-left: 15px">You are not a member of any organisation... <a href="@Url.Action("Create", "Organisations")">Create one</a>!</p>
+            <p style="padding-left: 15px">You are not a member of any organisation... </p>
         }
     </div>
     <div class="clearfix">&nbsp;</div>
@@ -64,17 +84,17 @@
 
 <section>
     <div class="title">
-        <h1>My playlists</h1>
-        @ViewBag.MyPlaylists.Count
-        <a href="" class="btn btn-right btn-portal" style="font-size: 0.6em">
+            <h1>My playlists</h1>
+        <div id="playlistCount" style="display: inline">@ViewBag.MyPlaylists.Count</div>
+        <a href="#playlistModal" class="btn btn-right btn-portal" style="font-size: 0.6em">
             <i class="material-icons">playlist_add</i> add playlist
         </a>
     </div>
-
-    <div class="container row">
+    
+    <div class="container row more-margin-top" id="myplaylists">
         @foreach (Playlist playlist in ViewBag.MyPlaylists)
         {
-            <a href="@Url.Action("View", "Playlist", new { id = playlist.Id })">
+            
                 <div class="col-md-4 col-xs-12 organisation-wrapper">
                     @{
                         var playlistSource = "/Content/img/playlistavatar.png";
@@ -83,20 +103,31 @@
                             playlistSource = FileHelper.GetImagePath("PlaylistImgPath", playlist.ImageUrl);
                         }
                     }
-                    <img src="@playlistSource" alt="playlist image" class="playlist-image" />
+                    <a href="@Url.Action("View", "Playlist", new {id = playlist.Id})">
+                        <img src="@playlistSource" alt="playlist image" class="playlist-image" />
 
-                    <h3>@playlist.Name</h3>
 
-                    <div>@playlist.PlaylistTracks.ToList().FindAll(p => p.PlayedAt == null).Count tracks in queue</div>
-                    <div class="clear-playlist">&nbsp;</div>
-                </div>
-            </a>
-         }
+                        <h3>@playlist.Name</h3>
+                    </a>
+                        <div>@playlist.PlaylistTracks.ToList().FindAll(p => p.PlayedAt == null).Count tracks in queue</div>
+                        <ul class="menu pull-right">
+                            <li>
+                                <a href="#"><i class="material-icons" style="color: black">settings</i></a>
+                                <ul>
+                                    <li style="cursor: pointer"><a onclick="updatePlaylist(@playlist.Id)">Edit</a></li>
+                                    <li style="cursor: pointer"><a onclick="deletePlaylist(@playlist.Id)">Delete</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <div class="clear-playlist">&nbsp;</div>
+</div>
+        }
         @if (ViewBag.MyPlaylists.Count == 0)
         {
-            <p style="padding-left: 15px">You do not have any playlists yet... <a href="@Url.Action("Create", "Playlist")">Create one</a>!</p>
+            <p style="padding-left: 15px">You do not have any playlists yet...</p>
         }
     </div>
+    
     <div class="clearfix">&nbsp;</div>
 </section>
 
@@ -109,7 +140,7 @@
     <div class="container row">
         @foreach (Playlist playlist in ViewBag.RecommendedPlaylists)
         {
-            <a href="@Url.Action("View", "Playlist", new { id = playlist.Id })">
+            <a href="@Url.Action("View", "Playlist", new {id = playlist.Id})">
                 <div class="col-md-4 col-xs-12 organisation-wrapper">
                     @{
                         var playlistSource = "/Content/img/playlistavatar.png";
@@ -118,7 +149,7 @@
                             playlistSource = FileHelper.GetImagePath("PlaylistImgPath", playlist.ImageUrl);
                         }
                     }
-                    <img src="@playlistSource" alt="playlist image" class="playlist-image" />
+                    <img src="@playlistSource" alt="playlist image" class="playlist-image"/>
 
                     <h3>@playlist.Name</h3>
 
@@ -130,3 +161,41 @@
     </div>
     <div class="clearfix">&nbsp;</div>
 </section>
+@section Scripts{
+    <script>
+    $(document).ready(function () {
+        $('.menu').dropit();
+    });
+
+    function deletePlaylist(platlistId) {
+        $.ajax({
+            url: '@Url.Action("Delete","Playlist")',
+            method: 'POST',
+            data: { id: platlistId }
+        }).done(function () {
+            notie.alert(1, 'Playlist successfull deleted', 2.5);
+            $("#myplaylists").load(location.href + " #myplaylists");
+            $("#playlistCount").load(location.href + " #playlistCount");
+
+        }).fail(function() {
+            notie.alert(3, 'Failed to delete playlist', 2.5);
+        });
+    }
+        function updatePlaylist(playlistId) {
+            $('#editPlaylistModal-body').load("/Playlist/Edit/" + playlistId);
+            window.location.href = '#editPlaylistModal';
+        }
+
+        document.getElementById('avatar_click2').onclick = function () {
+            document.getElementById('avatarImage2').click();
+        };
+        document.getElementById("avatarImage2").onchange = function () {
+            var filename = document.getElementById("avatarImage2").value;
+            var lastIndex = filename.lastIndexOf("\\");
+            if (lastIndex >= 0) {
+                filename = filename.substring(lastIndex + 1);
+            }
+            document.getElementById("avatarLabel2").innerText = filename;
+        };
+    </script>    
+}
